[project]
name = "prism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "moviepy>=2.2.1",
    "numpy<2.0",
    "openai-whisper>=20250625",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
]
